--- a/src/sass/Header.sass
+++ b/src/sass/Header.sass
@@ -1,4 +1,8 @@
 .Header 
-
+    display: flex
+    justify-content: space-between
+    align-items: center
     font-size: 1.5vh
     background-color: blue
+.Logo
+    margin: 0
