--- a/src/sass/AppWrapper.sass
+++ b/src/sass/AppWrapper.sass
@@ -1,7 +1,7 @@
 .AppWrapper
-    display: grid
-    grid-template-columns: 1fr 1fr 1fr
-    grid-column-gap: 50px
-    grid-row-gap: 50px
+    display: flex
     width: 80%
     margin: 0 auto
+    flex-wrap: wrap
+    justify-content: center
+    align-content: center
