--- a/src/sass/Menu.sass
+++ b/src/sass/Menu.sass
@@ -10,12 +10,15 @@
     flex-direction: column
     transform: translateX(0)
     transition: all 0.2s
-    background-color: pink
-    width: 30%
+    background-color: rgb(190, 28, 212)
+    width: 15%
     height: 100vh
     list-style-type: none
+    top: 59px
+    z-index: 1
 .menu__item 
     padding-left: 10px
+    list-style: none
 .blur 
     backdrop-filter: blur(2px)
     width: 100vw
