--- a/src/sass/Header.sass
+++ b/src/sass/Header.sass
@@ -2,7 +2,6 @@
     display: flex
     justify-content: space-between
     align-items: center
-    font-size: 1.5vh
-    background-color: blue
+    background-color: rgb(40, 221, 224)
 .Logo
     margin: 0
