--- a/src/commonComponents/BeerCard/BeerCard.sass
+++ b/src/commonComponents/BeerCard/BeerCard.sass
@@ -4,8 +4,8 @@
     flex-direction: column
     color: black
     justify-content: space-between
-    background-color: rgb(232, 223, 49)
-    border: 1px solid white
+    background-color: rgb(255, 252, 130)
+    border: 1px solid black
     border-radius: 10%
     padding: 20px
     width: 350px
