--- a/src/commonComponents/Menu/Menu.sass
+++ b/src/commonComponents/Menu/Menu.sass
@@ -19,6 +19,8 @@
 .menu__item 
     padding-left: 10px
     list-style: none
+    margin-top: 10px
+    font-size: 20px
 .blur 
     backdrop-filter: blur(2px)
     width: 100vw
@@ -26,3 +28,8 @@
     transform: translateX(0)
     position: absolute
     left: 30%
+.menu__list 
+    padding: 10px
+    display: flex
+    flex-direction: column
+    align-items: flex-start
