feat: realize basic routing

--- a/src/commonComponents/BeerCardButton/style.sass
+++ b/src/commonComponents/BeerCardButton/style.sass
@@ -9,7 +9,7 @@
   border: 0
   color: #fff
   letter-spacing: 3px
-  box-shadow: 6px 0px 0px #00E6F6
+  box-shadow: 6px 0 0 #00E6F6
   outline: transparent
   position: relative
 
@@ -64,11 +64,11 @@
   
   50% 
     clip-path: var(--slice-3)
-    transform: translate(5px, 0px);
+    transform: translate(5px, 0px)
   
   60% 
-    clip-path: var(--slice-4);
-    transform: translate(5px, 10px);
+    clip-path: var(--slice-4)
+    transform: translate(5px, 10px)
   
   70% 
     clip-path: var(--slice-2)
