--- a/src/commonComponents/BeerCard/style.sass
+++ b/src/commonComponents/BeerCard/style.sass
@@ -1,6 +1,6 @@
-.BeerCard 
+.beerCard
     box-sizing: border-box
-    display: flex;
+    display: flex
     flex-direction: column
     color: black
     justify-content: space-between
@@ -12,14 +12,14 @@
     height: 300px
     margin: 50px 50px
 .avatar
-    border: 1px solid #f3f3f3;
-    border-radius: 50%;
+    border: 1px solid #f3f3f3
+    border-radius: 50%
     margin: 0 auto
     width: 50px
     height: 50px
-.beercardButtons 
+.beercardButtons
     display: flex
     justify-content: space-between
-.BeerCard:hover
+.beerCard:hover
     transform: scale(1.2)
     transition-duration: 500ms
