refactor: PR fixes

--- a/src/commonComponents/BurgerButton/style.sass
+++ b/src/commonComponents/BurgerButton/style.sass
@@ -1,4 +1,6 @@
-.burgerButton
+@import "src/sass/var"
+
+.burger-button
   display: inline-block
   cursor: pointer
   padding: 10px
@@ -6,7 +8,7 @@
 .bar1, .bar2, .bar3
   width: 35px
   height: 5px
-  background-color: #333
+  background-color: $black
   margin: 6px 0
   transition: 0.4s
 
@@ -19,7 +21,7 @@
 
 .change .bar2
   opacity: 0
-  color: black
+  color: $black
 
 
 
