--- a/src/commonComponents/Header/style.sass
+++ b/src/commonComponents/Header/style.sass
@@ -1,7 +1,9 @@
-.Header 
+@import "src/sass/var"
+
+.header
     display: flex
     justify-content: space-between
     align-items: center
-    background-color: rgb(40, 221, 224)
-.Logo
+    background-color: $header-background
+.logo
     margin: 0
