--- a/src/commonComponents/Loading/style.sass
+++ b/src/commonComponents/Loading/style.sass
@@ -1,8 +1,10 @@
+@import "src/sass/var"
+
 .loading
-  border: 16px solid #f3f3f3
+  border: 16px solid $loading-border
   border-radius: 50%
-  border-top: 16px solid white
-  border-bottom: 16px solid white
+  border-top: 16px solid $white
+  border-bottom: 16px solid $white
   width: 120px
   height: 120px
   -webkit-animation: spin 2s linear infinite
