--- a/src/pages/BeerPage/style.sass
+++ b/src/pages/BeerPage/style.sass
@@ -1,22 +1,22 @@
-.beerDescription
+.beer-description
   display: flex
-.foodPairing
+.food-pairing
   margin: 0 30px
 .preparing
   display: flex
   flex-wrap: wrap
-.beerPageWrapper
+.beer-page-wrapper
   width: 80%
   margin: 0 auto
-.beerAvatar
+.beer-avatar
   border-radius: 50%
   width: 200px
   height: 200px
-.beerMinimumInfo
+.beer-minimum-info
   display: flex
   flex-direction: column
   width: 66%
-.beer-card
+.beer-page-card
   display: flex
   align-content: center
 .beer-avatar-box
