--- a/src/pages/MainPage/Components/FilterResults/style.sass
+++ b/src/pages/MainPage/Components/FilterResults/style.sass
@@ -1,6 +1,6 @@
-.filterResultsActive
+.filter-results-active
     display: flex
     flex-direction: column
     align-items: center
-.filterResults
+.filter-results
     display: none
