--- a/src/sass/_var.sass
+++ b/src/sass/_var.sass
@@ -1,1 +1,24 @@
-$beercard-background-color: rgba(254, 248, 2, 1)
+$beercard-background-color: rgb(255, 252, 130)
+
+$menu-background: rgb(190, 28, 212)
+
+$loading-border: #f3f3f3
+
+$header-background: rgb(40, 221, 224)
+
+$beercard-button-background: linear-gradient(45deg, transparent 5%, #FF013C 5%)
+$beercard-button-shadow: 6px 0 0 #00E6F6
+$beercard-button-text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6
+$beercard-button-background-animation: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #FF013C 5%)
+
+$search-background: #28dde0
+
+$slider-box-shadow-track: 1px 1px 1px #002200
+$slider-background-track: #F7FF00
+$slider-border-track: 1px solid #18D501
+$slider-box-shadow-thumb: 3px 3px 3px #00D400
+$slider-border-thumb: 2px solid #76CF77
+$slider-background-thumb: #00EEFF
+
+$white: white
+$black: black
