--- a/src/commonComponents/Menu/style.sass
+++ b/src/commonComponents/Menu/style.sass
@@ -1,34 +1,36 @@
+@import "src/sass/var"
+
 .menu
     display: flex
     position: fixed
     flex-direction: column
     width: 30%
     transform: translateX(-100%)
-.menuActive 
+.menu-active
     display: flex
     position: fixed
     flex-direction: column
     transform: translateX(0)
     transition: all 0.2s
-    background-color: rgb(190, 28, 212)
+    background-color: $menu-background
     width: 15%
     height: 100vh
     list-style-type: none
     top: 59px
     z-index: 1
-.menu__item 
+.menu-item
     padding-left: 10px
     list-style: none
     margin-top: 10px
     font-size: 20px
-.blur 
+.blur
     backdrop-filter: blur(2px)
     width: 100vw
     height: 100vh
     transform: translateX(0)
     position: absolute
     left: 30%
-.menu__list 
+.menu-list
     padding: 10px
     display: flex
     flex-direction: column
