--- a/src/pages/MainPage/Components/BeerCard/style.sass
+++ b/src/pages/MainPage/Components/BeerCard/style.sass
@@ -1,23 +1,25 @@
-.beerCard
+@import "src/sass/var"
+
+.beer-card
     box-sizing: border-box
     display: flex
     flex-direction: column
-    color: black
+    color: $black
     justify-content: space-between
-    background-color: rgb(255, 252, 130)
-    border: 1px solid black
+    background-color: $beercard-background-color
+    border: 1px solid $black
     border-radius: 10%
     padding: 20px
     width: 350px
     height: 300px
-    margin: 50px 50px
+    margin: 50px
 .avatar
     border: 1px solid #f3f3f3
     border-radius: 50%
     margin: 0 auto
     width: 50px
     height: 50px
-.beercardButtons
+.buttons-container
     display: flex
     justify-content: space-between
 .beerCard:hover
