--- a/src/pages/MainPage/Components/Search/style.sass
+++ b/src/pages/MainPage/Components/Search/style.sass
@@ -1,3 +1,5 @@
+@import "src/sass/var"
+
 *
     box-sizing: border-box
 .search-box
@@ -20,7 +22,7 @@
   outline: none
   border-radius: 25px
   transition: all .5s ease-in-out
-  background-color: #28dde0
+  background-color: $search-background
   padding-right: 40px
   color: #fff
 
@@ -49,14 +51,14 @@
 .btn-search:focus ~ .input-search
   width: 300px
   border-radius: 0
-  background-color: black
+  background-color: $black
   border-bottom: 1px solid rgba(255,255,255,.5)
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2)
 
 .input-search:focus
   width: 300px
   border-radius: 0
-  background-color: black
+  background-color: $black
   border-bottom: 1px solid rgba(255,255,255,.5)
   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2)
 
