--- a/src/pages/BeerPage/style.sass
+++ b/src/pages/BeerPage/style.sass
@@ -1,30 +1,12 @@
-.beer-description
-  display: flex
-.food-pairing
-  margin: 0 30px
+
+
 .preparing
   display: flex
   flex-wrap: wrap
 .beer-page-wrapper
   width: 80%
   margin: 0 auto
-.beer-avatar
-  border-radius: 50%
-  width: 200px
-  height: 200px
-.beer-minimum-info
-  display: flex
-  flex-direction: column
-  width: 66%
-.beer-page-card
-  display: flex
-  align-content: center
-.beer-avatar-box
-  margin: auto 20px
-.properties
-  display: flex
-  flex-direction: column
-  width: 50%
-.ingredients
-  margin-right: 30px
-.method
+  height: calc(100vh - 59px)
+
+
+
