--- a/src/pages/BeerPage/style.sass
+++ b/src/pages/BeerPage/style.sass
@@ -1,12 +1,11 @@
-
-
 .preparing
   display: flex
   flex-wrap: wrap
 .beer-page-wrapper
   width: 80%
   margin: 0 auto
-  height: calc(100vh - 59px)
+  height: 100%
+  min-height: 100vh
 
 
 
